--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.properties
+*.lock
+.gradle/2.4/taskArtifacts/fileHashes.bin
+*.bin
+.idea
