--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,14 @@
         android:minSdkVersion="11"
         android:targetSdkVersion="14" />
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <android:uses-permission android:name="android.permission.INTERNET" />
+    <android:Uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <android:uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <android:uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <android:uses-permission android:name="android.permission.CALL_PHONE" />
     <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
@@ -22,8 +24,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:configChanges="orientation|screenSize"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,6 +38,11 @@
             android:enabled="true" />
 
         <receiver android:name=".AlarmReceiver" />
+        <receiver android:name="core.HeadsetStateReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.HEADSET_PLUG"/>
+            </intent-filter>
+        </receiver>
 
         <activity android:name=".AlarmActivity" />
     </application>
